src/test/lab3/invalid/XX-Fail33.slac
class A {
    method foo() : retType = {
        // there should be no unary minus!
        z = -z;
        12
    }
}

method main() : Unit = { println("42") }
